# NVIDIA--Isaac-Lab-Quadrotor-control

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  REFACTOR_PATCH_MANIFEST.txt  pyproject.toml
assets/: README.md
assets/gifs/: README.md
assets/motions/: README.md
assets/usd/: README.md
configs/: local_paths.example.yaml  platform_ubuntu_laptop.yaml  platform_windows_3090.yaml  task1_hover_stabilization.yaml  task2_waypoint_tracking.yaml  task3_obstacle_navigation.yaml  task4_sim2real_robust_flight.yaml
docs/: project_overview.md  refactor_implementation.md  results_and_checkpoints.md  task1_design.md  task2_design.md  task3_design.md  task4_design.md  troubleshooting.md  ubuntu_training.md  windows_path_config.md  windows_training.md
scripts/ubuntu/: checkProjectStructure.sh  check_project_structure.sh  eval_task1_skrl.sh  eval_task1_skrl_deploy.sh  eval_task2_skrl.sh  eval_task3_skrl.sh  eval_task4_skrl.sh  evaluateTask1Hover.sh  evaluateTask2Waypoint.sh  evaluateTask3Obstacle.sh  evaluateTask4Gate.sh  testQuadrotorAssetControl.sh  testTask1Environment.sh  testTask2Environment.sh  testTask3Environment.sh  testTask3World.sh  testTask4Environment.sh  testTask4World.sh  test_quadrotor_asset_control.sh  test_task1_env.sh  test_task2_env.sh  test_task3_env.sh  test_task3_world.sh  test_task4_env.sh  test_task4_world.sh  trainTask1Hover.sh  trainTask1HoverSmoke.sh  trainTask2Waypoint.sh  trainTask2WaypointSmoke.sh  trainTask3Obstacle.sh  trainTask3ObstacleSmoke.sh  trainTask4Gate.sh  trainTask4GateSmoke.sh  (+8 more)
src/: sitecustomize.py
(+135 files in other folders)
